# countries_dw

./: .gitignore  README.md  countries.ipynb  main.py  pyproject.toml  res.json  steps WSL.txt
src/: countries_hook.py  country.py  main.py
src/countries_dbt_model/: dbt_project.yml
src/dbt/: dbt_project.yml
src/dbt/models/staging/: alternative_spellings.sql  borders_by_country.sql  capitals.sql  car_info.sql  codes.sql  codes_by_country.sql  countries.sql  country_native_names.sql  currencies_by_country.sql  demonyms_by_country.sql  domains.sql  flags_and_coat_of_arms.sql  general_infos.sql  gini_index_by_country.sql  idds_by_country.sql  independency_un_membership.sql  languages_by_country.sql  languages_table.sql  map_links.sql  regions_and_continents.sql  regions_and_continents_by_country.sql  schema.yml  (+2 more)
src/dbt/seeds/: alt_spellings.csv  borders.csv  capital.csv  car_information.csv  coat_of_arms.csv  codes.csv  continents.csv  currencies.csv  demonyms.csv  flags.csv  general_information.csv  gini_index.csv  idds.csv  independency_table.csv  languages.csv  lat_lng.csv  maps.csv  names.csv  native_names.csv  postal_codes.csv  properties.yml  regions.csv  timezones.csv  top_level_domains.csv  translations.csv  un_membership_table.csv
src/helpers/: helpers.py
src/hook/: countries_hook.py
src/parser/: country.py
src/pbi_project/: countries.pbip
src/pbi_project/countries.Dataset/: diagramLayout.json  item.config.json  item.metadata.json  model.bim
src/pbi_project/countries.Report/: definition.pbir  item.config.json  item.metadata.json  report.json
(+3 files in other folders)
