[tool.poetry]
name = "countries"
version = "0.1.0"
description = "A package to parse restcountries api information. Data will be parsed into dataframes."
authors = ["Gabriel Canuto <gb.canuto23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
