[tool.poetry]
name = "countries"
version = "0.1.0"
description = "A package to parse restcountries api information. Data will be parsed into dataframes."
authors = ["Gabriel Canuto <gb.canuto23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
requests = "^2.31.0"
fastparquet = "^2023.7.0"
pyarrow = "^12.0.1"
dbt-core = "^1.6.0"
dbt-postgres = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
